src/objects/Duplicate_Contact_Blocker_Setup__c.object
<CustomObject>
    <fields>
        <fullName>Match_Account_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match Account Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Match_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Match_First_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match First Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Match_Last_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match Last Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Match_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match Phone</label>
        <type>Checkbox</type>
    </fields>
    <label>Duplicate Contact Blocker Setup</label>
    <nameField>
        <label>Duplicate Contact Blocker Setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Duplicate Contact Blocker Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>